--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -467,6 +467,11 @@ body {
     margin: 0 0 20px;
   }
 
+  ul.reip-list {
+    font-size: 19px;
+    line-height: 1.7;
+  }
+
   .list-label {
     color: #dbe5ff;
     font-weight: 600;
