--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -720,8 +720,8 @@ body {
   }
   
   &.reip-figure {
-    width: min(90%, 500px);
-    max-width: 500px;
+    width: clamp(260px, 60vw, 640px);
+    max-width: 640px;
     height: auto;
   }
 
