--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
   </head>
   <body id="top" data-theme="dark">
     <div class="glass-nav-wrapper">
-      <header class="glass-nav" role="navigation" aria-label="Primary">
+      <header class="glass-nav" role="banner">
         <a class="glass-nav__icon" href="#top" aria-label="Back to top">
           <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false">
             <path d="M12 3l9 9h-3v9h-12v-9h-3z" />
