--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
     <div class="glass-nav-wrapper">
       <header class="glass-nav" role="banner">
         <a class="glass-nav__icon" href="#top" aria-label="Back to top">
-          <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+          <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false" fill="currentColor">
             <path d="M12 3l9 9h-3v9h-12v-9h-3z" />
           </svg>
         </a>
@@ -28,7 +28,7 @@
           <a href="#contact">contact</a>
         </nav>
         <button type="button" class="glass-nav__toggle" id="navThemeToggle" aria-label="Toggle theme" aria-pressed="false">
-          <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+          <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false" fill="currentColor">
             <path d="M12 4a1 1 0 0 1 1 1v2a1 1 0 1 1-2 0v-2a1 1 0 0 1 1-1zm0 13a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm7-5a1 1 0 0 1 1 1v0a1 1 0 1 1-2 0v0a1 1 0 0 1 1-1zm-13 0a1 1 0 0 1 1 1v0a1 1 0 1 1-2 0v0a1 1 0 0 1 1-1zm10.95-5.536a1 1 0 0 1 1.414 0l.001.001a1 1 0 0 1-1.414 1.414l-.001-.001a1 1 0 0 1 0-1.414zm-9.9 9.9a1 1 0 0 1 1.414 0l.001.001a1 1 0 1 1-1.414 1.414l-.001-.001a1 1 0 0 1 0-1.414zm0-9.9a1 1 0 0 1 0 1.414l-.001.001a1 1 0 1 1-1.414-1.414l.001-.001a1 1 0 0 1 1.414 0zm9.9 9.9a1 1 0 0 1 0 1.414l-.001.001a1 1 0 1 1-1.414-1.414l.001-.001a1 1 0 0 1 1.414 0z" />
           </svg>
           <span class="sr-only">Toggle color theme</span>
