--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,3 +1,10 @@
+.project-card__glanceHeading {
+  margin: 8px 0 4px;
+  text-transform: uppercase;
+  letter-spacing: 0.3em;
+  font-size: 0.68rem;
+  color: rgba(255, 255, 255, 0.55);
+}
 ---
 ---
 @import "{{ site.theme }}";
